--- a/genart_stack_v2.ipynb
+++ b/genart_stack_v2.ipynb
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -131,6 +131,15 @@
     "    \n",
     "withImgHeight 800 $ sampleArtist 1 laws env $ replicateM 1000 circleArtist"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
