Minor fixes to v1

--- a/genart/stack_v1.ipynb
+++ b/genart/stack_v1.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Explorations in Generative Art\n",
+    "# Explorations in Generative Art - Stack v1\n",
     "## Setup\n",
     "### Extensions and Imports"
    ]
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -176,7 +176,8 @@
    ],
    "source": [
     "let initialLoop = ColorLoop { points = triangle 70, colorBlend = 0 }\n",
-    " in sampleAndDraw 2 $ mconcat . map draw  <$> evolution 1000 initialLoop"
+    "\n",
+    "sampleAndDraw 2 $ mconcat . map draw  <$> evolution 1000 initialLoop"
    ]
   },
   {
@@ -188,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -212,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -228,7 +229,8 @@
    "source": [
     "let initialLine = ColorLine { points = zipWith (curry p2) [0,15..] (replicate 15 0)\n",
     "                            , colorBlend = 0 }\n",
-    "  in sampleAndDraw 1 $ mconcat . map draw  <$> evolution 1000 initialLine"
+    "\n",
+    "sampleAndDraw 1 $ mconcat . map draw  <$> evolution 1000 initialLine"
    ]
   },
   {
@@ -240,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -271,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -295,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -313,7 +315,8 @@
     "                                                               , level = 0\n",
     "                                                               , maxLevel = 5}\n",
     "                             , colorBlend = 0 }\n",
-    "  in sampleAndDraw 1 $ mconcat . reverse . map draw  <$> evolution 1000 initialTree"
+    "\n",
+    "sampleAndDraw 1 $ mconcat . reverse . map draw  <$> evolution 1000 initialTree"
    ]
   },
   {
