Updated README with stack v3 ideas

--- a/genart/basic_usage.ipynb
+++ b/genart/basic_usage.ipynb
@@ -24,6 +24,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Random Variables"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
@@ -70,6 +77,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Random Diagrams"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
@@ -100,6 +114,13 @@
     "sampleBubbles n = sampleRVar $ randBubbles n\n",
     "\n",
     "withImgHeight 500 $ diagram $ evalState (sampleBubbles 9000) $ mkStdGen 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Adding Texture"
    ]
   },
   {
@@ -146,6 +167,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Composing diagrams"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
@@ -175,7 +203,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Lines"
+    "### Lines"
    ]
   },
   {
