--- a/genart/stack_v1.ipynb
+++ b/genart/stack_v1.ipynb
@@ -100,7 +100,7 @@
     "              -> ManuallySized (QDiagram Cairo V2 Double Any) -- draws diagram\n",
     "              \n",
     "sampleAndDraw seed randomDiagram = withImgHeight 500 $ diagram d\n",
-    "  where d = evalState (sampleRVar randomDiagram) $ mkStdGen seed"
+    "  where d = evalState (sampleStateRVar randomDiagram) $ mkStdGen seed"
    ]
   },
   {
