--- a/genart/stack_v2.ipynb
+++ b/genart/stack_v2.ipynb
@@ -83,7 +83,7 @@
    },
    "outputs": [],
    "source": [
-    "sampleArtist seed laws env artist = State.evalState (sampleRVar randomDrawing) $ mkStdGen 1\n",
+    "sampleArtist seed laws env artist = State.evalState (sampleStateRVar randomDrawing) $ mkStdGen 1\n",
     "  where randomDrawing = snd <$> execRWST artist laws env -- execRWST returns RVar (state, writer)"
    ]
   },
